@@ -1,51 +1,0 @@
-language: cpp
-dist: bionic
-os: linux
-
-jobs:
-  include:
-    # Ubuntu Linux 18.04 gcc
-    - os: linux
-      compiler: gcc
-      before_install:
-        - sudo apt-get install cmake ninja-build
-
-    # Apple OSX LLVM version 10.0.0 (clang-1000.11.45.5)
-    - os: osx
-      osx_image: xcode10.1
-      compiler: clang
-      before_install:
-        - rm -rf /usr/local/include/c++
-        - brew update
-        - brew install gcc6 ninja
-
-    # OSX gcc6
-    - os: osx
-      osx_image: xcode10.1
-      compiler: gcc
-      before_install:
-        - rm -rf /usr/local/include/c++
-        - brew update
-        - brew install gcc6 ninja
-        - export CXX="g++-6" CC="gcc-6"
-        - sudo softwareupdate -i "Command Line Tools (macOS High Sierra version 10.13) for Xcode-10.1"
-
-notifications:
-  email: false
-
-script:
-  - $CXX --version
-
-  # Install liboqs
-  - sh ./.travis/install_liboqs.sh &>/dev/null
-
-  # Build the examples and the unit tests
-  - mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug && make -j4
- 
-  # Run the examples
-  - ./kem
-  - ./rand
-  - ./sig
-
-  # Run the unit tests
-  - make test ARGS='-V'
