@@ -4,18 +4,31 @@ liboqs-cpp version 0.4.0
 About
 -----
 
-The **Open Quantum Safe (OQS) project** has the goal of developing and prototyping quantum-resistant cryptography. More information on OQS can be found on our website: https://openquantumsafe.org/ and on Github at https://github.com/open-quantum-safe/.
+The **Open Quantum Safe (OQS) project** has the goal of developing and
+prototyping quantum-resistant cryptography. More information on OQS can be found
+on our website: https://openquantumsafe.org/ and on Github
+at https://github.com/open-quantum-safe/.
 
-**liboqs** is an open source C library for quantum-resistant cryptographic algorithms. See more about liboqs at [https://github.com/open-quantum-safe/liboqs/](https://github.com/open-quantum-safe/liboqs/), including a list of supported algorithms.
+**liboqs** is an open source C library for quantum-resistant cryptographic
+algorithms. See more about liboqs
+at [https://github.com/open-quantum-safe/liboqs/](https://github.com/open-quantum-safe/liboqs/)
+, including a list of supported algorithms.
 
-**liboqs-cpp** is an open source C++ wrapper for the liboqs C library for quantum-resistant cryptographic algorithms. Details about liboqs-cpp can be found in [README.md](https://github.com/open-quantum-safe/liboqs-cpp/blob/main/README.md). See in particular limitations on intended use.
+**liboqs-cpp** is an open source C++ wrapper for the liboqs C library for
+quantum-resistant cryptographic algorithms. Details about liboqs-cpp can be
+found
+in [README.md](https://github.com/open-quantum-safe/liboqs-cpp/blob/main/README.md)
+. See in particular limitations on intended use.
 
 Release notes
 =============
 
-This release of liboqs-cpp was released on November 28, 2020. Its release page on GitHub is https://github.com/open-quantum-safe/liboqs-cpp/releases/tag/0.4.0.
+This release of liboqs-cpp was released on November 28, 2020. Its release page
+on GitHub is https://github.com/open-quantum-safe/liboqs-cpp/releases/tag/0.4.0.
 
 What's New
 ----------
 
-This is the eight release of liboqs-cpp. For a list of changes see [CHANGES.txt](https://github.com/open-quantum-safe/liboqs-cpp/blob/main/CHANGES.txt).
+This is the eight release of liboqs-cpp. For a list of changes
+see [CHANGES.txt](https://github.com/open-quantum-safe/liboqs-cpp/blob/main/CHANGES.txt)
+.
